src/objects/AssessmentList__c.object
<CustomObject>
    <fields>
        <fullName>Assessment_Object__c</fullName>
        <label>Assessment Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assessmentName__c</fullName>
        <label>assessmentName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>inUse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pageName__c</fullName>
        <label>pageName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordsMigrated__c</fullName>
        <label>recordsMigrated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>showContactBasicInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showContactBasicInfo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <label>source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Assessment List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>assessmentName__c</columns>
        <columns>Assessment_Object__c</columns>
        <columns>pageName__c</columns>
        <columns>isActive__c</columns>
        <columns>Date__c</columns>
        <columns>recordsMigrated__c</columns>
        <columns>Notes__c</columns>
        <columns>Programs__c</columns>
        <columns>showContactBasicInfo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>AssessmentList Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>